# EDMS

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: edms-ci.yml
EDMS/: .env.dist  manage.py  mypy.ini
EDMS/EDMS/: asgi.py  celery.py  custom_django_model_permissions.py  env.py  factory_utils.py  group_tags.py  group_utils.py  groups.py  settings.py  urls.py  wsgi.py
EDMS/common_tests/: EDMSTestCase.py  consts.py
EDMS/companies/: admin.py  apps.py  factories.py  filters.py  forms.py  models.py  urls.py  views.py
EDMS/companies/api/: serializers.py
EDMS/companies/forms/: forms_company_and_address.py  forms_contact.py
EDMS/companies/migrations/: 0001_initial.py  0002_alter_address_city_alter_address_country_and_more.py  0002_alter_company_is_mine.py  0002_alter_contact_phone.py  0003_alter_address_city.py  0004_alter_address_country.py  0005_alter_company_krs_alter_company_nip_and_more.py  0006_alter_address_unique_together_and_more.py
EDMS/companies/tests/: test_factories.py  test_models.py
EDMS/companies/views/: views_api_address.py  views_api_company.py  views_api_contact.py  views_company.py  views_contact.py
EDMS/contracts/: admin.py  apps.py  factories.py  filters.py  forms.py  models.py  serializers.py  urls.py  validators.py  views.py
EDMS/dashboards/: admin.py  apps.py  forms.py  models.py  plot_app.py  plots.py  urls.py  views.py
EDMS/employees/: admin.py  apps.py  filters.py  tasks.py  urls.py  validators.py
EDMS/invoices/: admin.py  apps.py  factories.py  filters.py  forms.py  models.py  serializers.py  urls.py  validators.py  views.py
EDMS/orders/: admin.py  apps.py  factories.py  filters.py  forms.py  models.py  serializers.py  signals.py  urls.py  validators.py  views.py
EDMS/templates/: base.html  base2.html  sidebar.html  topbar.html
EDMS/users/: admin.py  apps.py  factories.py  filters.py  forms.py  models.py  tasks.py  tokens.py  urls.py  validators.py  views.py
(+357 files in other folders)
